@@ -5,6 +5,7 @@ import com.github.kegszool.bot.menu.BaseMenu;
 import org.springframework.stereotype.Component;
 import org.springframework.beans.factory.annotation.Value;
 
+import java.util.Collections;
 import java.util.List;
 
 @Component
@@ -34,7 +35,7 @@ public class MainMenu extends BaseMenu {
 
     @Override
     protected List<String> getFullWidthSections() {
-        return List.of();
+        return Collections.emptyList();
     }
 
     @Override
